feat(docker): enable jpeg-xl support for linux/amd64